--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,12 @@
 language: node_js
 node_js:
-  - "stable"
-install: npm install
+  - "10"
+cache:
+  directories:
+    - "node_modules"
+before_script:
+  - npm install
 script:
   - npm test
 after_success:
-  - npm run coveralls
+  - npm run coveralls 
