--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,8 @@
-// {
-//   "presets": ["@babel/preset-env"]
-// }
 {
-  "presets": ["airbnb","@babel/preset-env"],
-  "plugins":[["@babel/transform-runtime"]]
+  "presets": ["@babel/preset-env"],
+        "env": {
+          "development": {
+            "plugins": [ "istanbul" ]
+          }
+        }
 }
