--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,9 @@ cache:
 services:
     - postgresql
 before_script:
-  - psql -c 'create database development;' -U postgres
+  - psql -c 'create database travis_ci_test;' -U postgres
 script:
   - npm run test
+  - nyc report --reporter=text-lcov > coverage.lcov && codecov
 after_success:
   - npm run coveralls
