--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,12 @@ cache:
     - "node_modules"
 services:
     - postgresql
+env:
+  global:
+    ENV=TRAVIS
+sudo: false
+install:
+  - npm install -g codecov    
 before_script:
   - psql -c 'create database travis_ci_test;' -U postgres
 script:
